# url-shorter

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.trunk/: trunk.yaml
database/: database.sql
src/: lib.rs  main.rs  routes.rs
src/cache/: mod.rs
src/handlers/: models.rs
src/models/: mod.rs
src/storage/: mod.rs
