[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-web-httpauth = "0.6"
env_logger = "0.10.1"
log = "0.4.20"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0"
mysql = "20.0.0"
hex = "0.4.3"
sha2 = "0.10.8"
md5 = "0.7.0"